--- a/curso.css
+++ b/curso.css
@@ -24,10 +24,12 @@ header h1{
     font-size: 26px;
 }
 
-header p{
-    margin: 2px;
-    font-size: 16px;
-
+header li{
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
+}
 }
 
 main{
@@ -36,33 +38,8 @@ main{
     gap: 20px;
     width: 80%;
     max-width: 400px;
-}
-.card{
-    background: rgba(255,255,255, 0.1);
-    border-radius: 9px;
-    padding: 20px;
-    text-align: center;
-    transition: transform 0.2s ease;
-}
-.card:hover{
-    transform: scale(1.05);
-}
-.card h2{
-    margin-bottom: 10px;
 
-}
 
-.card a{
-    display: inline-block;
-    margin-top: 10px;
-    padding:10px 20px;
-    background:rgba(255,255,255, 0.1);
-    color: rgb(58, 5, 51);
-    text-decoration: none;
-    border-radius: 10px;
-    font-weight: bold;
-
-}
 footer{
     margin: 30px 0px;
     font-size: 14px;
