--- a/sobre.css
+++ b/sobre.css
@@ -7,36 +7,33 @@ body{
     flex-direction: column;
     align-items: center;
 }
-
-header h1{
+header{
     text-align: center;
-    padding:200px;
+    padding:30px;
 }
 header img{
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    border:4px solid rgb(84, 11, 87);
+    
+    width: 120px;
+    height: 120px;
+    border-radius:50%;
+    border: 4px solid rgb(100, 10, 48);
 }
-
 
 header h1{
-    margin: 15px 0 5px;
-    font-size: 40px;
+    margin:15px 0 5px;
+    font-size: 26px;
 }
 
-
-
-
-
-
-
 header p{
-   font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight: weight;
   font-style: normal;
+  color: white;
 }
+
+
+
 footer{
     margin: 30px 0px;
     font-size: 14px;
