--- a/sobre.css
+++ b/sobre.css
@@ -12,7 +12,7 @@ header{
     padding:30px;
 }
 header img{
-    
+    align-items:center;
     width: 120px;
     height: 120px;
     border-radius:50%;
