--- a/sobre.css
+++ b/sobre.css
@@ -1,5 +1,6 @@
-body{
-    background-color: rgb(128, 72, 116);
+body{ 
+    margin: 0;
+    background: rgb(128, 72, 116);
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: linear-gradient(120deg, rgb(0, 0, 0), rgb(94, 6, 64), rgb(122, 70, 106));
     color:rgb(255, 255, 255);
@@ -9,29 +10,33 @@ body{
 }
 header{
     text-align: center;
-    padding:30px;
+    padding: 30px;
 }
+
+
 header img{
-    align-items:center;
-    width: 120px;
-    height: 120px;
-    border-radius:50%;
-    border: 4px solid rgb(100, 10, 48);
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border:4px solid rgb(84, 11, 87);
 }
+
 
 header h1{
-    margin:15px 0 5px;
-    font-size: 26px;
+    margin: 15px 0 5px;
+    font-size: 40px;
 }
 
+
+
+
 header p{
-  font-family: "Montserrat", sans-serif;
+ font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight: weight;
   font-style: normal;
   color: white;
 }
-
 
 
 footer{
