--- a/sobre.css
+++ b/sobre.css
@@ -27,7 +27,13 @@ header h1{
     font-size: 40px;
 }
 
-
+main{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 80%;
+    max-width: 400px;
+}
 
 
 header p{
